tests/NormalTests/paczka1/fuzzy1/11443460.err
Error in line 3: 4GMTvLquxU S988 74,4
Error in line 12: LbJcR5m A33 51,1
Error in line 21: LbJcR5m A417 94,0
Error in line 31: S988 A417 23,63
Error in line 15: wQRVuV S988 5,1
